# seatable

./: .gitignore  README.md  check_install.py  pyproject.toml  seatable_config.json.example
src/seatable_mcp/: server.py
tests/: test_multi_token.py  test_server.py
